enter button centered

--- a/styleEP.css
+++ b/styleEP.css
@@ -136,20 +136,34 @@ font-family: 'Bowlby One SC', cursive;
 
 }
 
-.btn-circle.btn-xl {
+/* .btn-circle.btn-xl {
   width: 70px;
   height: 70px;
   padding: 10px 16px;
   font-size: 24px;
   line-height: 1.33;
   border-radius: 35px;
+} */
+.circleButton{
+width:100%;
+text-align: center;
 }
-
-.circleButton {
+.circleButton > p {
+  margin-left: auto;
+  margin-right: auto;
   font-size: 15px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding-top:auto;
+  padding-bottom:auto; */
+  border-radius:50%;
+  height:100px !important;
+  width:100px !important;
   color: black;
-  font-weight: 900;
+  background-color:white;
+  font-weight: 700;
+
 }
 
 .carousel{
@@ -196,3 +210,16 @@ h1 {
 #car2 {
   font-family: 'Bowlby One SC', cursive;
 }
+
+.carousel-caption {
+bottom:50%;
+transform:translateY(50%);
+
+}
+
+/* .center{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);;
+} */
